# bpf-iotrace

./: .gitignore  CMakeLists.txt  README.md  REQUIREMENTS.md  notes.md  vcpkg-configuration.json  vcpkg.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  toolchain.cmake
scratch/bzip2/: portfile.cmake
scratch/elfutils/: portfile.cmake  vcpkg.json
src/bpf/: CMakeLists.txt  read.bpf.c  read.c
tools/vcpkg-overlays/triplets/: x64-linux.cmake
